Задание 2: реализация функционала для bank-accounts
